# grasp

./: .gitignore  Cargo.toml  flake.nix
gdraw/: Cargo.toml
gdraw-python/: Cargo.toml
gdraw-python/src/: lib.rs
gdraw/src/: lib.rs  main.rs
gdraw/src/frame/: app.rs  function_window.rs  graph_interaction.rs  header.rs  mod.rs  sandbox.rs  style.rs  windows.rs
gdraw/src/graph/: graph_widget.rs  (+4 more)
grasp/: Cargo.toml
grasp-core/: Cargo.toml
grasp-core/src/: lib.rs  main.rs  serialization.rs
grasp-python/: Cargo.toml
grasp-python/examples/: DA.py  gdraw_example.py  kruskal.py
grasp-python/src/: lib.rs
grasp/examples/: database.rs  haruhi.rs  hypercube_gonality.rs  matching.rs  planarity.rs
grasp/shaders/: isomorphism.wgsl
grasp/src/: lib.rs  serialization.rs
grasp/src/algorithms/: algo_traits.rs  coloring.rs  connectivity.rs  construction.rs  distance.rs  gonality.rs  isomorphism.rs  matchings.rs  mod.rs  planarity.rs  registry.rs  search.rs  search_visitors.rs  test.rs  trees.rs
grasp/src/graph/: adjacency_list.rs  constructors.rs  directed.rs  error.rs  graph_ops.rs  homogenous.rs  labeled_graph.rs  mod.rs  permutation.rs  set.rs  util.rs
grasp/src/serialization/: dot.rs  error.rs  format.rs  gml.rs  graphml.rs  mod.rs  nauty.rs  ser.rs  tgf.rs
macros/: Cargo.toml
macros/src/: lib.rs
python/: Cargo.toml  pyproject.toml
python/src/: lib.rs
src/: lib.rs  main.rs  serialization.rs
src/algorithms/: algo_traits.rs  distance.rs  mod.rs  search.rs
src/graph/: adjacency_list.rs  graph_ops.rs  graph_traits.rs  labeled_graph.rs  mod.rs  util.rs
src/serialization/: error.rs  format.rs  mod.rs  ser.rs
(+7 files in other folders)
