[package]
name = "grasp"
version = "0.1.0"
edition = "2024"

[dependencies]
pretty_assertions = "1.4.1"
serde = { version = "1.0", features = ["derive"], optional = true}
quick-xml = { version = "0.39.2", features = ["serialize"], optional = true}
bimap = "0.6.3"
graph_ops_macros = {path = "../macros"}
itertools = "0.14.0"

[features]
serde = ["dep:serde"]
xml = ["dep:quick-xml"]

[dev-dependencies]
gdraw = {path = "../gdraw"}
eframe = "0.33.3"