[package]
name = "grasp"
version = "0.1.0"
edition = "2024"

[dependencies]
pretty_assertions = "1.4.1"
serde = { version = "1.0", features = ["derive"], optional = true}
quick-xml = { version = "0.39.2", features = ["serialize"], optional = true}
bimap = "0.6.3"
wgpu = {version = "29.0.1", optional = true}
bytemuck = {version = "1.25.0", optional = true}
futures = {version = "0.3.32", optional = true}
graph_ops_macros = {path = "../macros"}
itertools = "0.14.0"

[features]
default = ["serde", "xml", "wgpu"]
serde = ["dep:serde"]
xml = ["dep:quick-xml"]
wgpu = ["dep:wgpu", "dep:bytemuck", "dep:futures"]

[dev-dependencies]
gdraw = {path = "../gdraw"}
eframe = "0.33.3"
rusqlite = "0.39.0"
